--- a/data-science.html
+++ b/data-science.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellhealthinc/jobs/4367501002'>Job Application for Data Scientist at WELL Health Inc.</a></h5> 
 <p><span class="badge badge-light">Santa Barbara</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -184,7 +184,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/568e30d9-0d34-4cf3-84c0-16e0a82ce541'>GOJEK - Data Scientist, Recommendations</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -228,7 +228,7 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://motiion.recruiterbox.com/jobs/fk0jolc/'>
+<h5><a href='https://motiion.recruiterbox.com/jobs/fk0jolc/'>
     Data Scientist - [Remote] - [Europe] at Motiion Inc.
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -282,7 +282,7 @@ federal?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oNHP8fwb&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nljeQKwX'>Schneider Electric NAM Careers - Data Scientist, Data Center Systems</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oNHP8fwb&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nljeQKwX'>Schneider Electric NAM Careers - Data Scientist, Data Center Systems</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -310,7 +310,7 @@ federal?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oYEM9fwh&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nMGTPKwp'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oYEM9fwh&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nMGTPKwp'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
@@ -351,7 +351,7 @@ datasets and machine learning infrastructure to develop and tackle the complex?.
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upwork-tac.workable.com/j/209D2D91FF'>Upwork - Jobs: Senior Data Scientist - Apply online</a></h5> 
+<h5><a href='https://upwork-tac.workable.com/j/209D2D91FF'>Upwork - Jobs: Senior Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">Dubai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -406,7 +406,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ooda-health/80df4355-eccb-40c3-9692-d421d3d97c80'>OODA Health - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ooda-health/80df4355-eccb-40c3-9692-d421d3d97c80'>OODA Health - Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -446,7 +446,7 @@ Marketing?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://cytora.workable.com/jobs/1067106'>Cytora - Jobs: Data Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cytora.workable.com/jobs/1067106'>Cytora - Jobs: Data Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... We are a high-growth FinTech startup using data and machine learning to 
 revolutionise the insurance industry. You will be joining an established team, 
@@ -458,11 +458,11 @@ working?...</p>
 order to run and evaluate experiments and using machine learning techniques in
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/9rpipmm4qyi7sfy8wtsg7rip8e'>Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/9rpipmm4qyi7sfy8wtsg7rip8e'>Deep Learning Data Scientist ($300k - $500k) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/d7j44bswjb91rc1u4zqf6t6ija'>Data Scientist (Data Visualization) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/d7j44bswjb91rc1u4zqf6t6ija'>Data Scientist (Data Visualization) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
